# Swingby-Trajectory

./: .gitignore  .swp  README.md  TrajectoryOptimizer.py  experiments_.docx  optimizer.py  pinn.py  plotter.py  pyproject.toml  requirements.txt  result.py
2d/: TrajectoryOptimizer.py
2d/transformed/: TrajectoryOptimizer.py
2d/vanilla/: TrajectoryOptimizer.py
3d/: 3d.py  TrajectoryOptimizer.py
3d/2d_masses/: ic.txt
3d/3d_masses/: ic.txt
config/: config_2d.py  config_3d.py  shared_parameters.py  transform_functions.py
experiments/: boundary_weight_search.py  boundary_weight_search_3d.py  kinematic_into_z.py  shifted_bc.py  static_total_time_sweep.py  vanilla_vs_position_2d.py  vanilla_vs_position_3d.py
experiments/boundary_weight_search_dynamic/: boundary_weight_search.py
experiments/boundary_weight_search_static/: boundary_weight_search.py  boundary_weight_search_3d.py  weights2d_1109.csv  weights3d_1209.csv
experiments/shifted_bc/: shifted_bc_3d.pkl  shifted_bc_3d_results.pkl
experiments/vanilla_vs_position_2d/: vanilla_vs_position_2d.py
experiments/vanilla_vs_position_3d/: vanilla_vs_position_3d.py
kinematic/: TrajectoryOptimizer.py
old/2d/: main2d.py
old/3d/: TrajectoryOptimizer.py
old/circular-orbit-transfer/: TrajectoryOptimizer.py
old/experiments_old/: weights1.csv  weights2d.csv  weights2d_dynamic_full.csv  weights3d.csv
old/leftovers/: weights.csv
pseudo-3d/: TrajectoryOptimizer.py  ic.txt  pseudo-3d.py
src/: optimizer.py  pinn.py  plotter.py  result.py  runner.py  transform_functions.py
src/swingby_trajectory/: pinn.py  (+4 more)
(+42 files in other folders)
